--- a/catalog.html
+++ b/catalog.html
@@ -14,7 +14,7 @@
         <img class="logo" src="images/vector/logo.svg" width="137" height="56" alt="Логотип магазина Глэйси">
       </a>
       <nav class="main-navigation">
-        <ul class="navigation-list site-navigation">
+        <ul class="navigation-list site-navigation reset-list">
           <li class="navigation-item">
             <a class="navigation-link navigation-link-current" href="catalog.html">Каталог</a>
           </li>
@@ -26,7 +26,7 @@
           </li>
         </ul>
         <a class="phone" href="tel:+78005558628">+7 800 555-86-28</a>
-        <ul class="navigation-list user-navigation">
+        <ul class="navigation-list user-navigation reset-list">
           <li class="navigation-item">
             <a class="navigation-link" href="#">
               <span class="visually-hidden">
@@ -55,7 +55,7 @@
       <h1 class="visually-hidden">Страница каталога</h1>
       <section class="catalog-breadcrumbs">
         <h2 class="visually-hidden">Навигационная цепочка</h2>
-        <ul class="breadcrumbs-list">
+        <ul class="breadcrumbs-list reset-list">
           <li class="breadcrambs-item">
             <a class="breadcrambs-link" href="index.html">Главная</a>
           </li>
@@ -151,7 +151,7 @@
       </section>
       <section class="assortment">
         <h2 class="visually-hidden">Карта товаров</h2>
-        <ul class="assortment-list">
+        <ul class="assortment-list reset-list">
           <li class="assortment-item">
             <img class="assortment-image" src="images/catalog/raspberries.png" width="168" height="168"
               alt="Шарик мороженного">
@@ -278,7 +278,7 @@
         </ul>
         <div class="pagination-wrap">
           <button class="button pagination-wrap-button" type="submit">Показать еще</button>
-          <ul class="pagination">
+          <ul class="pagination reset-list">
             <li class="pagination-item">
               <a class="pagination-link pagination-prev pagination-disabled">
                 <span class="visually-hidden">Предыдущая страница </span>
@@ -311,7 +311,7 @@
     <footer class="page-footer">
       <section class="social">
         <h3 class="visually-hidden">Соцсети</h3>
-        <ul class="social-list">
+        <ul class="social-list reset-list">
           <li class="social-item">
             <a class="button" href="#">
               <span class="visually-hidden">ВКонтакте</span>
