крупные сетки-итог
допилил)

--- a/catalog.html
+++ b/catalog.html
@@ -277,7 +277,7 @@
           </li>
         </ul>
         <div class="pagination-wrap">
-          <button class="button pagination-wrap-button" type="submit">Показать еще</button>
+          <button class="button pagination-wrap-button" type="button">Показать еще</button>
           <ul class="pagination reset-list">
             <li class="pagination-item">
               <a class="pagination-link pagination-prev pagination-disabled">
