микросетки на флексах

--- a/catalog.html
+++ b/catalog.html
@@ -68,7 +68,7 @@
         </ul>
       </section>
       <section class="catalog-filter">
-        <h2 class="catalog-filter-title title-ex-bold">Сливочное мороженое</h2>
+        <h2 class="catalog-filter-title text-bold">Сливочное мороженое</h2>
         <form class="catalog-form" action="https://echo.htmlacademy.ru/" method="GET">
           <fieldset class="catalog-form-group">
             <legend class="catalog-form-group-title">Сортировка:</legend>
@@ -157,7 +157,7 @@
               alt="Шарик мороженного">
             <h3 class="assortment-title">Малинка</h3>
             <p>Сливочное мороженое с малиновым джемом</p>
-            <b>310 ₽/кг</b>
+            <b class="text-norm">310 ₽/кг</b>
             <button class="assortment-button" type="button">
               <img src="#" alt="значек корзины">
             </button>
@@ -167,7 +167,7 @@
               alt="Шарик мороженного">
             <h3 class="assortment-title">Фисташка</h3>
             <p>Фисташковый пломбир с кусочками шоколада</p>
-            <b>340 ₽/кг</b>
+            <b class="text-norm">340 ₽/кг</b>
             <button class="assortment-button" type="button">
               <img src="#" alt="значек корзины">
             </button>
@@ -178,7 +178,7 @@
             <h3 class="assortment-title">Черника</h3>
             <p>Крем-брюле
               с черничным джемом</p>
-            <b>330 ₽/кг</b>
+            <b class="text-norm">330 ₽/кг</b>
             <button class="assortment-button" type="button">
               <img src="#" alt="значек корзины">
             </button>
@@ -188,7 +188,7 @@
               alt="Шарик мороженного">
             <h3 class="assortment-title">Бабл-гам</h3>
             <p>Ванильный пломбир со сладкой посыпкой</p>
-            <b>320 ₽/кг</b>
+            <b class="text-norm">320 ₽/кг</b>
             <button class="assortment-button" type="button">
               <img src="#" alt="значек корзины">
             </button>
@@ -198,7 +198,7 @@
               alt="Шарик мороженного">
             <h3 class="assortment-title">Ежевика</h3>
             <p>Сливочное мороженое с ежевичным джемом</p>
-            <b>330 ₽/кг</b>
+            <b class="text-norm">330 ₽/кг</b>
             <button class="assortment-button" type="button">
               <img src="#" alt="значек корзины">
             </button>
@@ -209,7 +209,7 @@
             <h3 class="assortment-title">Банан</h3>
             <p>Сливочный пломбир
               с банановым вкусом</p>
-            <b>340 ₽/кг</b>
+            <b class="text-norm">340 ₽/кг</b>
             <button class="assortment-button" type="button">
               <img src="#" alt="значек корзины">
             </button>
@@ -219,7 +219,7 @@
               alt="Шарик мороженного">
             <h3 class="assortment-title">Шоколадка</h3>
             <p>Классический шоколадный пломбир</p>
-            <b>270 ₽/кг</b>
+            <b class="text-norm">270 ₽/кг</b>
             <button class="assortment-button" type="button">
               <img src="#" alt="значек корзины">
             </button>
@@ -230,7 +230,7 @@
             <h3 class="assortment-title">Клубничка</h3>
             <p>Сливочный пломбир
               с клубничным вкусом</p>
-            <b>300 ₽/кг</b>
+            <b class="text-norm">300 ₽/кг</b>
             <button class="assortment-button" type="button">
               <img src="#" alt="значек корзины">
             </button>
@@ -240,7 +240,7 @@
               alt="Шарик мороженного">
             <h3 class="assortment-title">Лимон</h3>
             <p>Освежающий лимонный сорбет</p>
-            <b>310 ₽/кг</b>
+            <b class="text-norm">310 ₽/кг</b>
             <button class="assortment-button" type="button">
               <img src="#" alt="значек корзины">
             </button>
@@ -250,7 +250,7 @@
               alt="Шарик мороженного">
             <h3 class="assortment-title">Ментол</h3>
             <p>Сливочный пломбир с ментоловым сиропом</p>
-            <b>320 ₽/кг</b>
+            <b class="text-norm">320 ₽/кг</b>
             <button class="assortment-button" type="button">
               <img src="#" alt="значек корзины">
             </button>
@@ -260,7 +260,7 @@
               alt="Шарик мороженного">
             <h3 class="assortment-title">Орешек</h3>
             <p>Фисташковый пломбир с шоколадным сиропом</p>
-            <b>360 ₽/кг</b>
+            <b class="text-norm">360 ₽/кг</b>
             <button class="assortment-button" type="button">
               <img src="#" alt="значек корзины">
             </button>
@@ -270,7 +270,7 @@
               alt="Шарик мороженного">
             <h3 class="assortment-title">Крем-брюле</h3>
             <p>Классическое крем-брюле</p>
-            <b>280 ₽/кг</b>
+            <b class="text-norm">280 ₽/кг</b>
             <button class="assortment-button" type="button">
               <img src="#" alt="значек корзины">
             </button>
