--- a/index.html
+++ b/index.html
@@ -189,12 +189,12 @@
         </div>
       </section>
       <section class="presents">
-        <h2 class="presents-title">Заказывайте мороженое и получайте подарки!</h2>
+        <h2 class="presents-title text-bold">Заказывайте мороженое и получайте подарки!</h2>
         <ul class="presents-list reset-list">
           <li class="presents-item">
             <div class="presents-item-wrap">
               <h3 class="presents-item-title">Малинка даром!</h3>
-              <p>При покупке 2 кг любого фруктового мороженого, добавим в ваш заказ банку малинового варенья бесплатно.
+              <p class="presents-item-desc">При покупке 2 кг любого фруктового мороженого добавим в ваш заказ банку малинового варенья бесплатно.
               </p>
               <a class="button" href="#"><span>Хочу подарок</span></a>
             </div>
@@ -202,9 +202,9 @@
               alt="Малинка в рожке">
           </li>
           <li class="presents-item">
-            <div class="presents-item-wrap">
+            <div class="presents-item-wrap presents-item-wrap-marshmallows">
               <h3 class="presents-item-title">Маршмеллоу даром!</h3>
-              <p>При покупке 2 кг пломбира, добавим в ваш заказ упаковку нежных зефирок совершенно бесплатно.</p>
+              <p class="presents-item-desc">При покупке 2 кг пломбира, добавим в ваш заказ упаковку нежных зефирок совершенно бесплатно.</p>
               <a class="button" href="#"><span>Хочу подарок</span></a>
             </div>
             <img class="presents-image-marshmallows" src="images/background/zefir.png" width="232" height="359"
@@ -213,14 +213,14 @@
         </ul>
       </section>
       <section class="assortment">
-        <h2 class="assortment-heading">Попробуйте самые популярные вкусы нашего мороженого</h2>
+        <h2 class="assortment-heading text-bold">Попробуйте самые популярные вкусы нашего мороженого</h2>
         <ul class="assortment-list reset-list">
           <li class="assortment-item">
             <img class="assortment-image" src="images/catalog/raspberries.png" width="168" height="168"
               alt="Шарик мороженного">
             <h3 class="assortment-title">Малинка</h3>
             <p>Сливочное мороженое с малиновым джемом</p>
-            <b>310 ₽/кг</b>
+            <b class="text-norm">310 ₽/кг</b>
             <button class="assortment-button" type="button">
               <img src="images/vector/basket-prod.svg" width="32" height="32" alt="значек корзины">
             </button>
@@ -230,7 +230,7 @@
               alt="Шарик мороженного">
             <h3 class="assortment-title">Фисташка</h3>
             <p>Фисташковый пломбир с кусочками шоколада</p>
-            <b>340 ₽/кг</b>
+            <b class="text-norm">340 ₽/кг</b>
             <button class="assortment-button" type="button">
               <img src="images/vector/basket-prod.svg" width="32" height="32" alt="значек корзины">
             </button>
@@ -240,7 +240,7 @@
               alt="Шарик мороженного">
             <h3 class="assortment-title">Черника</h3>
             <p>Крем-брюле с черничным джемом</p>
-            <b>330 ₽/кг</b>
+            <b class="text-norm">330 ₽/кг</b>
             <button class="assortment-button" type="button">
               <img src="images/vector/basket-prod.svg" width="32" height="32" alt="значек корзины">
             </button>
@@ -250,7 +250,7 @@
               alt="Шарик мороженного">
             <h3 class="assortment-title">Бабл-гам</h3>
             <p>Ванильный пломбир со сладкой посыпкой</p>
-            <b>320 ₽/кг</b>
+            <b class="text-norm">320 ₽/кг</b>
             <button class="assortment-button" type="button">
               <img src="images/vector/basket-prod.svg" width="32" height="32" alt="значек корзины">
             </button>
@@ -260,7 +260,7 @@
       <section class="description">
         <h2 class="visually-hidden">Преимущества магазина</h2>
         <div class="description-wrap">
-          <p class="description-title">Магазин Глэйси – это онлайн и офлайн-магазин по продаже мороженого собственного
+          <p class="description-title text-bold">Магазин Глэйси – это онлайн и офлайн-магазин по продаже мороженого собственного
             проиводства на развес</p>
           <ul class="description-item reset-list">
             <li class="description-list">
@@ -316,7 +316,7 @@
       </div>
       <section class="delivery">
         <div class="delivery-desc">
-          <h2 class="delivery-title">Доставка любимого мороженого на дом</h2>
+          <h2 class="delivery-title text-bold">Доставка любимого мороженого на дом</h2>
           <p class="delivery-desc-text">Хочется полакомиться любимым дессертом, но нет времени съездить в магазин?
             Закажите
             доставку мороженого на
@@ -357,9 +357,9 @@
         <h2 class="visually-hidden">Адрес</h2>
         <div class="contacts-content">
           <p class="contacts-content-text">Адрес главного офиса и офлайн-магазина: </p>
-          <span class="contacts-content-adres">наб. Реки Карповки, 5 лит П, Санкт-Петербург</span>
+          <span class="contacts-content-adres text-norm">наб. Реки Карповки, 5 лит П, Санкт-Петербург</span>
           <p>Для заказов по телефону:</p>
-          <a class="contacts-content-phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
+          <a class="contacts-content-phone text-norm" href="tel:+78128121212">+7 (812) 812-12-12</a>
           <p>(с 10 до 20 ежедневно)</p>
           <a class="button" href="#">Форма обратной связи</a>
         </div>
