поправил width, отступы, размер картинок

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       </a>
       <nav class="main-navigation">
         <ul class="navigation-list site-navigation reset-list">
-          <li class="navigation-item">
+          <li class="navigation-item ">
             <a class="navigation-link" href="catalog.html">Каталог</a>
           </li>
           <li class="navigation-item">
@@ -191,24 +191,22 @@
       <section class="presents">
         <h2 class="presents-title text-bold">Заказывайте мороженое и получайте подарки!</h2>
         <ul class="presents-list reset-list">
-          <li class="presents-item">
+          <li class="presents-item presents-item_raspberry">
             <div class="presents-item-wrap">
               <h3 class="presents-item-title">Малинка даром!</h3>
-              <p class="presents-item-desc">При покупке 2 кг любого фруктового мороженого добавим в ваш заказ банку малинового варенья бесплатно.
+              <p class="presents-item-desc">При покупке 2 кг любого фруктового мороженого добавим в ваш заказ банку
+                малинового варенья бесплатно.
               </p>
               <a class="button" href="#"><span>Хочу подарок</span></a>
             </div>
-            <img class="presents-image-raspberry" src="images/background/malin.png" width="181" height="284"
-              alt="Малинка в рожке">
           </li>
-          <li class="presents-item">
+          <li class="presents-item presents-item_marshmallows">
             <div class="presents-item-wrap presents-item-wrap-marshmallows">
               <h3 class="presents-item-title">Маршмеллоу даром!</h3>
-              <p class="presents-item-desc">При покупке 2 кг пломбира, добавим в ваш заказ упаковку нежных зефирок совершенно бесплатно.</p>
+              <p class="presents-item-desc">При покупке 2 кг пломбира добавим в ваш заказ упаковку нежных зефирок
+                совершенно бесплатно.</p>
               <a class="button" href="#"><span>Хочу подарок</span></a>
             </div>
-            <img class="presents-image-marshmallows" src="images/background/zefir.png" width="232" height="359"
-              alt="Маршмелоу в рожке">
           </li>
         </ul>
       </section>
@@ -216,69 +214,78 @@
         <h2 class="assortment-heading text-bold">Попробуйте самые популярные вкусы нашего мороженого</h2>
         <ul class="assortment-list reset-list">
           <li class="assortment-item">
-            <img class="assortment-image" src="images/catalog/raspberries.png" width="168" height="168"
-              alt="Шарик мороженного">
-            <h3 class="assortment-title">Малинка</h3>
-            <p>Сливочное мороженое с малиновым джемом</p>
-            <b class="text-norm">310 ₽/кг</b>
-            <button class="assortment-button" type="button">
-              <img src="images/vector/basket-prod.svg" width="32" height="32" alt="значек корзины">
-            </button>
+            <div class="assortment-item-wrap">
+              <img class="assortment-image" src="images/catalog/raspberries.png" width="192" height="184"
+                alt="Шарик мороженного">
+              <h3 class="assortment-title">Малинка</h3>
+              <p>Сливочное мороженое с малиновым джемом</p>
+              <b class="text-norm">310 ₽/кг</b>
+              <button class="assortment-button" type="button">
+                <img src="images/vector/basket-prod.svg" width="32" height="32" alt="значек корзины">
+              </button>
+            </div>
           </li>
           <li class="assortment-item">
-            <img class="assortment-image" src="images/catalog/pistachio.png" width="168" height="168"
-              alt="Шарик мороженного">
-            <h3 class="assortment-title">Фисташка</h3>
-            <p>Фисташковый пломбир с кусочками шоколада</p>
-            <b class="text-norm">340 ₽/кг</b>
-            <button class="assortment-button" type="button">
-              <img src="images/vector/basket-prod.svg" width="32" height="32" alt="значек корзины">
-            </button>
+            <div class="assortment-item-wrap">
+              <img class="assortment-image" src="images/catalog/pistachio.png" width="192" height="184"
+                alt="Шарик мороженного">
+              <h3 class="assortment-title">Фисташка</h3>
+              <p>Фисташковый пломбир с кусочками шоколада</p>
+              <b class="text-norm">340 ₽/кг</b>
+              <button class="assortment-button" type="button">
+                <img src="images/vector/basket-prod.svg" width="32" height="32" alt="значек корзины">
+              </button>
+            </div>
           </li>
           <li class="assortment-item">
-            <img class="assortment-image" src="images/catalog/blueberry.png" width="168" height="168"
-              alt="Шарик мороженного">
-            <h3 class="assortment-title">Черника</h3>
-            <p>Крем-брюле с черничным джемом</p>
-            <b class="text-norm">330 ₽/кг</b>
-            <button class="assortment-button" type="button">
-              <img src="images/vector/basket-prod.svg" width="32" height="32" alt="значек корзины">
-            </button>
+            <div class="assortment-item-wrap">
+              <img class="assortment-image" src="images/catalog/blueberry.png" width="192" height="184"
+                alt="Шарик мороженного">
+              <h3 class="assortment-title">Черника</h3>
+              <p>Крем-брюле с черничным джемом</p>
+              <b class="text-norm">330 ₽/кг</b>
+              <button class="assortment-button" type="button">
+                <img src="images/vector/basket-prod.svg" width="32" height="32" alt="значек корзины">
+              </button>
+            </div>
           </li>
           <li class="assortment-item">
-            <img class="assortment-image" src="images/catalog/bubble-gum.png" width="168" height="168"
-              alt="Шарик мороженного">
-            <h3 class="assortment-title">Бабл-гам</h3>
-            <p>Ванильный пломбир со сладкой посыпкой</p>
-            <b class="text-norm">320 ₽/кг</b>
-            <button class="assortment-button" type="button">
-              <img src="images/vector/basket-prod.svg" width="32" height="32" alt="значек корзины">
-            </button>
+            <div class="assortment-item-wrap">
+              <img class="assortment-image" src="images/catalog/bubble-gum.png" width="192" height="184"
+                alt="Шарик мороженного">
+              <h3 class="assortment-title">Бабл-гам</h3>
+              <p>Ванильный пломбир со сладкой посыпкой</p>
+              <b class="text-norm">320 ₽/кг</b>
+              <button class="assortment-button" type="button">
+                <img src="images/vector/basket-prod.svg" width="32" height="32" alt="значек корзины">
+              </button>
+            </div>
           </li>
         </ul>
       </section>
       <section class="description">
         <h2 class="visually-hidden">Преимущества магазина</h2>
         <div class="description-wrap">
-          <p class="description-title text-bold">Магазин Глэйси – это онлайн и офлайн-магазин по продаже мороженого собственного
+          <p class="description-title text-bold">Магазин Глейси – это онлайн и офлайн-магазин по продаже мороженого
+            собственного
             проиводства на развес</p>
           <ul class="description-item reset-list">
             <li class="description-list">
               <img class="description-image" src="images/vector/ice-cream.svg" width="48" height="48"
                 alt="значек мороженного">
-              <p>Все наше мороженое изгатавливается на собственном производстве, с использованием современного
-                оборудования
-                и проверенных временем технологий.</p>
+              <p>Все наше мороженое изгатавливается на собственном производстве с использованием современного
+                оборудования и проверенных временем технологий.</p>
             </li>
             <li class="description-list">
               <img class="description-image" src="images/vector/cow.svg" width="48" height="48" alt="значек коровы">
-              <p>Закупка ингредиентов производится только у проверенных фермерских хозяйств, с которыми нас связывает
+              <p>Закупка ингредиентов производится только<br> у проверенных фермерских хозяйств, с которыми<br> нас
+                связывает
                 долговременное сотрудничество.</p>
             </li>
             <li class="description-list">
               <img class="description-image" src="images/vector/leaflet.svg" width="48" height="48"
                 alt="значек листика">
-              <p>Для приготовления мороженого используются сливки и молоко высочайшего качества. Все ингредиенты
+              <p>Для приготовления мороженого используются сливки и молоко высочайшего качества. Все ингредиенты<br>
                 и добавки произведены из натурального сырья.</p>
             </li>
             <li class="description-list">
@@ -295,23 +302,25 @@
         <article class="news">
           <h2 class="visually-hidden">Новости в блоге</h2>
           <p>Новое в нашем блоге</p>
-          <span class="news-text">10 способов сервировки фруктовых щербетов к столу</span>
+          <span class="news-text">10 способов сервировки фруктовых щербетов<br> к столу</span>
         </article>
         <section class="mailing">
-          <h2 class="visually-hidden">Подписка на рассылку</h2>
-          <p class="mailing-desc">Подпишитесь на нашу сладкую рассылку и будьте всегда в курсе всего самого вкусного,
-            что у нас происходит.
-            Обещаем не спамить и не слать всякой ненужной ерунды. Честно =)</p>
-          <form class="mailing-form" action="http://echo.htmlacademy.ru/" method="POST">
-            <p class="mailing-email">
-              <label class="visually-hidden" for="mailing-email">Email</label>
-              <input class="field" placeholder="email@example.com" type="email" name="email" id="mailing-email"
-                required>
-            </p>
-            <button class="mailing-button" type="button">
-              <span>Отправить</span>
-            </button>
-          </form>
+          <div class="mailing-wrap">
+            <h2 class="visually-hidden">Подписка на рассылку</h2>
+            <p class="mailing-desc">Подпишитесь на нашу сладкую рассылку и будьте всегда в курсе всего самого вкусного,
+              что у нас происходит.
+              Обещаем не спамить и не слать всякой ненужной ерунды. Честно =)</p>
+            <form class="mailing-form" action="http://echo.htmlacademy.ru/" method="POST">
+              <p class="mailing-email">
+                <label class="visually-hidden" for="mailing-email">Email</label>
+                <input class="field" placeholder="email@example.com" type="email" name="email" id="mailing-email"
+                  required>
+              </p>
+              <button class="mailing-button" type="button">
+                <span>Отправить</span>
+              </button>
+            </form>
+          </div>
         </section>
       </div>
       <section class="delivery">
