--- a/catalog.html
+++ b/catalog.html
@@ -153,127 +153,151 @@
         <h2 class="visually-hidden">Карта товаров</h2>
         <ul class="assortment-list reset-list">
           <li class="assortment-item">
-            <img class="assortment-image" src="images/catalog/raspberries.png" width="168" height="168"
-              alt="Шарик мороженного">
-            <h3 class="assortment-title">Малинка</h3>
-            <p>Сливочное мороженое с малиновым джемом</p>
-            <b class="text-norm">310 ₽/кг</b>
-            <button class="assortment-button" type="button">
-              <img src="#" alt="значек корзины">
-            </button>
+            <div class="assortment-item-wrap">
+              <img class="assortment-image" src="images/catalog/raspberries.png" width="192" height="184"
+                alt="Шарик мороженного">
+              <h3 class="assortment-title">Малинка</h3>
+              <p>Сливочное мороженое с малиновым джемом</p>
+              <b class="text-norm">310 ₽/кг</b>
+              <button class="assortment-button" type="button">
+                <img src="images/vector/basket-prod.svg" width="32" height="32" alt="значек корзины">
+              </button>
+            </div>
           </li>
           <li class="assortment-item">
-            <img class="assortment-image" src="images/catalog/pistachio.png" width="168" height="168"
-              alt="Шарик мороженного">
-            <h3 class="assortment-title">Фисташка</h3>
-            <p>Фисташковый пломбир с кусочками шоколада</p>
-            <b class="text-norm">340 ₽/кг</b>
-            <button class="assortment-button" type="button">
-              <img src="#" alt="значек корзины">
-            </button>
+            <div class="assortment-item-wrap">
+              <img class="assortment-image" src="images/catalog/pistachio.png" width="192" height="184"
+                alt="Шарик мороженного">
+              <h3 class="assortment-title">Фисташка</h3>
+              <p>Фисташковый пломбир с кусочками шоколада</p>
+              <b class="text-norm">340 ₽/кг</b>
+              <button class="assortment-button" type="button">
+                <img src="images/vector/basket-prod.svg" width="32" height="32" alt="значек корзины">
+              </button>
+            </div class="assortment-item-wrap">
           </li>
           <li class="assortment-item">
-            <img class="assortment-image" src="images/catalog/blueberry.png" width="168" height="168"
-              alt="Шарик мороженного">
-            <h3 class="assortment-title">Черника</h3>
-            <p>Крем-брюле
-              с черничным джемом</p>
-            <b class="text-norm">330 ₽/кг</b>
-            <button class="assortment-button" type="button">
-              <img src="#" alt="значек корзины">
-            </button>
+            <div class="assortment-item-wrap">
+              <img class="assortment-image" src="images/catalog/blueberry.png" width="192" height="184"
+                alt="Шарик мороженного">
+              <h3 class="assortment-title">Черника</h3>
+              <p>Крем-брюле
+                с черничным джемом</p>
+              <b class="text-norm">330 ₽/кг</b>
+              <button class="assortment-button" type="button">
+                <img src="images/vector/basket-prod.svg" width="32" height="32" alt="значек корзины">
+              </button>
+            </div class="assortment-item-wrap">
           </li>
           <li class="assortment-item">
-            <img class="assortment-image" src="images/catalog/bubble-gum.png" width="168" height="168"
-              alt="Шарик мороженного">
-            <h3 class="assortment-title">Бабл-гам</h3>
-            <p>Ванильный пломбир со сладкой посыпкой</p>
-            <b class="text-norm">320 ₽/кг</b>
-            <button class="assortment-button" type="button">
-              <img src="#" alt="значек корзины">
-            </button>
+            <div class="assortment-item-wrap">
+              <img class="assortment-image" src="images/catalog/bubble-gum.png" width="192" height="184"
+                alt="Шарик мороженного">
+              <h3 class="assortment-title">Бабл-гам</h3>
+              <p>Ванильный пломбир со сладкой посыпкой</p>
+              <b class="text-norm">320 ₽/кг</b>
+              <button class="assortment-button" type="button">
+                <img src="images/vector/basket-prod.svg" width="32" height="32" alt="значек корзины">
+              </button>
+            </div class="assortment-item-wrap">
           </li>
           <li class="assortment-item">
-            <img class="assortment-image" src="images/catalog/blackberry.png" width="168" height="168"
-              alt="Шарик мороженного">
-            <h3 class="assortment-title">Ежевика</h3>
-            <p>Сливочное мороженое с ежевичным джемом</p>
-            <b class="text-norm">330 ₽/кг</b>
-            <button class="assortment-button" type="button">
-              <img src="#" alt="значек корзины">
-            </button>
+            <div class="assortment-item-wrap">
+              <img class="assortment-image" src="images/catalog/blackberry.png" width="192" height="184"
+                alt="Шарик мороженного">
+              <h3 class="assortment-title">Ежевика</h3>
+              <p>Сливочное мороженое с ежевичным джемом</p>
+              <b class="text-norm">330 ₽/кг</b>
+              <button class="assortment-button" type="button">
+                <img src="images/vector/basket-prod.svg" width="32" height="32" alt="значек корзины">
+              </button>
+            </div class="assortment-item-wrap">
           </li>
           <li class="assortment-item">
-            <img class="assortment-image" src="images/catalog/banana.png" width="168" height="168"
-              alt="Шарик мороженного">
-            <h3 class="assortment-title">Банан</h3>
-            <p>Сливочный пломбир
-              с банановым вкусом</p>
-            <b class="text-norm">340 ₽/кг</b>
-            <button class="assortment-button" type="button">
-              <img src="#" alt="значек корзины">
-            </button>
+            <div class="assortment-item-wrap">
+              <img class="assortment-image" src="images/catalog/banana.png" width="192" height="184"
+                alt="Шарик мороженного">
+              <h3 class="assortment-title">Банан</h3>
+              <p>Сливочный пломбир
+                с банановым вкусом</p>
+              <b class="text-norm">340 ₽/кг</b>
+              <button class="assortment-button" type="button">
+                <img src="images/vector/basket-prod.svg" width="32" height="32" alt="значек корзины">
+              </button>
+            </div class="assortment-item-wrap">
           </li>
           <li class="assortment-item">
-            <img class="assortment-image" src="images/catalog/chocolate.png" width="168" height="168"
-              alt="Шарик мороженного">
-            <h3 class="assortment-title">Шоколадка</h3>
-            <p>Классический шоколадный пломбир</p>
-            <b class="text-norm">270 ₽/кг</b>
-            <button class="assortment-button" type="button">
-              <img src="#" alt="значек корзины">
-            </button>
+            <div class="assortment-item-wrap">
+              <img class="assortment-image" src="images/catalog/chocolate.png" width="192" height="184"
+                alt="Шарик мороженного">
+              <h3 class="assortment-title">Шоколадка</h3>
+              <p>Классический шоколадный пломбир</p>
+              <b class="text-norm">270 ₽/кг</b>
+              <button class="assortment-button" type="button">
+                <img src="images/vector/basket-prod.svg" width="32" height="32" alt="значек корзины">
+              </button>
+            </div class="assortment-item-wrap">
           </li>
           <li class="assortment-item">
-            <img class="assortment-image" src="images/catalog/strawberry.png" width="168" height="168"
-              alt="Шарик мороженного">
-            <h3 class="assortment-title">Клубничка</h3>
-            <p>Сливочный пломбир
-              с клубничным вкусом</p>
-            <b class="text-norm">300 ₽/кг</b>
-            <button class="assortment-button" type="button">
-              <img src="#" alt="значек корзины">
-            </button>
+            <div class="assortment-item-wrap">
+              <img class="assortment-image" src="images/catalog/strawberry.png" width="192" height="184"
+                alt="Шарик мороженного">
+              <h3 class="assortment-title">Клубничка</h3>
+              <p>Сливочный пломбир
+                с клубничным вкусом</p>
+              <b class="text-norm">300 ₽/кг</b>
+              <button class="assortment-button" type="button">
+                <img src="images/vector/basket-prod.svg" width="32" height="32" alt="значек корзины">
+              </button>
+            </div class="assortment-item-wrap">
           </li>
           <li class="assortment-item">
-            <img class="assortment-image" src="images/catalog/lemon.png" width="168" height="168"
-              alt="Шарик мороженного">
-            <h3 class="assortment-title">Лимон</h3>
-            <p>Освежающий лимонный сорбет</p>
-            <b class="text-norm">310 ₽/кг</b>
-            <button class="assortment-button" type="button">
-              <img src="#" alt="значек корзины">
-            </button>
+            <div class="assortment-item-wrap">
+              <img class="assortment-image" src="images/catalog/lemon.png" width="192" height="184"
+                alt="Шарик мороженного">
+              <h3 class="assortment-title">Лимон</h3>
+              <p>Освежающий лимонный сорбет</p>
+              <b class="text-norm">310 ₽/кг</b>
+              <button class="assortment-button" type="button">
+                <img src="images/vector/basket-prod.svg" width="32" height="32" alt="значек корзины">
+              </button>
+            </div class="assortment-item-wrap">
           </li>
           <li class="assortment-item">
-            <img class="assortment-image" src="images/catalog/menthol.png" width="168" height="168"
-              alt="Шарик мороженного">
-            <h3 class="assortment-title">Ментол</h3>
-            <p>Сливочный пломбир с ментоловым сиропом</p>
-            <b class="text-norm">320 ₽/кг</b>
-            <button class="assortment-button" type="button">
-              <img src="#" alt="значек корзины">
-            </button>
+            <div class="assortment-item-wrap">
+              <img class="assortment-image" src="images/catalog/menthol.png" width="192" height="184"
+                alt="Шарик мороженного">
+              <h3 class="assortment-title">Ментол</h3>
+              <p>Сливочный пломбир с ментоловым сиропом</p>
+              <b class="text-norm">320 ₽/кг</b>
+              <button class="assortment-button" type="button">
+                <img src="images/vector/basket-prod.svg" width="32" height="32" alt="значек корзины">
+              </button>
+            </div class="assortment-item-wrap">
           </li>
           <li class="assortment-item">
-            <img class="assortment-image" src="images/catalog/nuts.png" width="168" height="168"
-              alt="Шарик мороженного">
-            <h3 class="assortment-title">Орешек</h3>
-            <p>Фисташковый пломбир с шоколадным сиропом</p>
-            <b class="text-norm">360 ₽/кг</b>
-            <button class="assortment-button" type="button">
-              <img src="#" alt="значек корзины">
-            </button>
+            <div class="assortment-item-wrap">
+              <img class="assortment-image" src="images/catalog/nuts.png" width="192" height="184"
+                alt="Шарик мороженного">
+              <h3 class="assortment-title">Орешек</h3>
+              <p>Фисташковый пломбир с шоколадным сиропом</p>
+              <b class="text-norm">360 ₽/кг</b>
+              <button class="assortment-button" type="button">
+                <img src="images/vector/basket-prod.svg" width="32" height="32" alt="значек корзины">
+              </button>
+            </div class="assortment-item-wrap">
           </li>
           <li class="assortment-item">
-            <img class="assortment-image" src="images/catalog/creme-brulee.png" width="168" height="168"
-              alt="Шарик мороженного">
-            <h3 class="assortment-title">Крем-брюле</h3>
-            <p>Классическое крем-брюле</p>
-            <b class="text-norm">280 ₽/кг</b>
-            <button class="assortment-button" type="button">
-              <img src="#" alt="значек корзины">
-            </button>
+            <div class="assortment-item-wrap">
+              <img class="assortment-image" src="images/catalog/creme-brulee.png" width="192" height="184"
+                alt="Шарик мороженного">
+              <h3 class="assortment-title">Крем-брюле</h3>
+              <p>Классическое крем-брюле</p>
+              <b class="text-norm">280 ₽/кг</b>
+              <button class="assortment-button" type="button">
+                <img src="images/vector/basket-prod.svg" width="32" height="32" alt="значек корзины">
+              </button>
+            </div class="assortment-item-wrap">
           </li>
         </ul>
         <div class="pagination-wrap">
