правки микросетки на флексах

--- a/catalog.html
+++ b/catalog.html
@@ -149,7 +149,7 @@
           <button class="button" type="submit">Применить</button>
         </form>
       </section>
-      <section class="assortment">
+      <section class="assortment assortment-catalog">
         <h2 class="visually-hidden">Карта товаров</h2>
         <ul class="assortment-list reset-list">
           <li class="assortment-item">
