сетка компонентов на гридах

--- a/catalog.html
+++ b/catalog.html
@@ -149,7 +149,7 @@
           <button class="button" type="submit">Применить</button>
         </form>
       </section>
-      <section class="assortment assortment-catalog">
+      <section class="assortment assortment-cata">
         <h2 class="visually-hidden">Карта товаров</h2>
         <ul class="assortment-list reset-list">
           <li class="assortment-item">
@@ -181,8 +181,7 @@
               <img class="assortment-image" src="images/catalog/blueberry.png" width="192" height="184"
                 alt="Шарик мороженного">
               <h3 class="assortment-title">Черника</h3>
-              <p>Крем-брюле
-                с черничным джемом</p>
+              <p>Крем-брюле <br> с черничным джемом</p>
               <b class="text-norm">330 ₽/кг</b>
               <button class="assortment-button" type="button">
                 <img src="images/vector/basket-prod.svg" width="32" height="32" alt="значек корзины">
@@ -194,7 +193,7 @@
               <img class="assortment-image" src="images/catalog/bubble-gum.png" width="192" height="184"
                 alt="Шарик мороженного">
               <h3 class="assortment-title">Бабл-гам</h3>
-              <p>Ванильный пломбир со сладкой посыпкой</p>
+              <p>Ванильный пломбир <br> со сладкой посыпкой</p>
               <b class="text-norm">320 ₽/кг</b>
               <button class="assortment-button" type="button">
                 <img src="images/vector/basket-prod.svg" width="32" height="32" alt="значек корзины">
@@ -218,7 +217,7 @@
               <img class="assortment-image" src="images/catalog/banana.png" width="192" height="184"
                 alt="Шарик мороженного">
               <h3 class="assortment-title">Банан</h3>
-              <p>Сливочный пломбир
+              <p>Сливочный пломбир<br>
                 с банановым вкусом</p>
               <b class="text-norm">340 ₽/кг</b>
               <button class="assortment-button" type="button">
@@ -243,8 +242,7 @@
               <img class="assortment-image" src="images/catalog/strawberry.png" width="192" height="184"
                 alt="Шарик мороженного">
               <h3 class="assortment-title">Клубничка</h3>
-              <p>Сливочный пломбир
-                с клубничным вкусом</p>
+              <p>Сливочный пломбир<br> с клубничным вкусом</p>
               <b class="text-norm">300 ₽/кг</b>
               <button class="assortment-button" type="button">
                 <img src="images/vector/basket-prod.svg" width="32" height="32" alt="значек корзины">
@@ -268,7 +266,7 @@
               <img class="assortment-image" src="images/catalog/menthol.png" width="192" height="184"
                 alt="Шарик мороженного">
               <h3 class="assortment-title">Ментол</h3>
-              <p>Сливочный пломбир с ментоловым сиропом</p>
+              <p>Сливочный пломбир<br> с ментоловым сиропом</p>
               <b class="text-norm">320 ₽/кг</b>
               <button class="assortment-button" type="button">
                 <img src="images/vector/basket-prod.svg" width="32" height="32" alt="значек корзины">
@@ -292,7 +290,7 @@
               <img class="assortment-image" src="images/catalog/creme-brulee.png" width="192" height="184"
                 alt="Шарик мороженного">
               <h3 class="assortment-title">Крем-брюле</h3>
-              <p>Классическое крем-брюле</p>
+              <p>Классическое<br> крем-брюле</p>
               <b class="text-norm">280 ₽/кг</b>
               <button class="assortment-button" type="button">
                 <img src="images/vector/basket-prod.svg" width="32" height="32" alt="значек корзины">
