--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                 <p class="text-content-desc">Натуральное мороженое из свежих сливок <br>
                   и молока с вкуснейшим клубничным джемом <br> – это идеальный десерт для всей семьи.
                 </p>
-                <a class="button button-promo" href="#">
+                <a class="button button-promo button-white" href="#">
                   <span class="promo-button-text">Заказать</span>
                 </a>
               </div>
@@ -197,7 +197,7 @@
               <p class="presents-item-desc">При покупке 2 кг любого фруктового мороженого добавим в ваш заказ банку
                 малинового варенья бесплатно.
               </p>
-              <a class="button" href="#"><span>Хочу подарок</span></a>
+              <a class="button button-white" href="#"><span>Хочу подарок</span></a>
             </div>
           </li>
           <li class="presents-item presents-item_marshmallows">
@@ -205,7 +205,7 @@
               <h3 class="presents-item-title">Маршмеллоу даром!</h3>
               <p class="presents-item-desc">При покупке 2 кг пломбира добавим в ваш заказ упаковку нежных зефирок
                 совершенно бесплатно.</p>
-              <a class="button" href="#"><span>Хочу подарок</span></a>
+              <a class="button button-white" href="#"><span>Хочу подарок</span></a>
             </div>
           </li>
         </ul>
@@ -307,7 +307,7 @@
         <section class="mailing">
           <div class="mailing-wrap">
             <h2 class="visually-hidden">Подписка на рассылку</h2>
-            <p class="mailing-desc">Подпишитесь на нашу сладкую рассылку и будьте всегда в курсе всего самого вкусного,
+            <p class="mailing-desc">Подпишитесь на нашу сладкую рассылку и будьте всегда <br> в курсе всего самого вкусного,
               что у нас происходит.
               Обещаем не спамить и не слать всякой ненужной ерунды. Честно =)</p>
             <form class="mailing-form" action="http://echo.htmlacademy.ru/" method="POST">
@@ -316,7 +316,7 @@
                 <input class="field" placeholder="email@example.com" type="email" name="email" id="mailing-email"
                   required>
               </p>
-              <button class="mailing-button" type="button">
+              <button class="mailing-button button-pink" type="button">
                 <span>Отправить</span>
               </button>
             </form>
@@ -329,14 +329,14 @@
           <p class="delivery-desc-text">Хочется полакомиться любимым дессертом, но нет времени съездить в магазин?
             Закажите
             доставку мороженого на
-            дом
+            дом,
             и курьер привезет вам ваш заказ в течение часа!</p>
         </div>
         <section class="delivery-content">
           <h2 class="visually-hidden">Форма доставки</h2>
-          <p>Укажите адрес и дату доставки, и мы свяжемся с вами, чтобы подтвердить заказ.</p>
+          <p class="delivery-content-desc">Укажите адрес и дату доставки, и мы свяжемся <br> с вами, чтобы подтвердить заказ.</p>
           <form class="form-delivery" action="https://echo.htmlacademy.ru/" method="POST">
-            <p class="form-delivery-date">
+            <p class="field-group form-delivery-date">
               <span class="form-label form-label-icon">
                 <label for="form-label-date">Дата</label>
                 <button class="info" type="button">
@@ -345,11 +345,11 @@
               </span>
               <input type="text" id="form-label-date" name="date-delivery" placeholder="01.04.2020">
             </p>
-            <p class="form-delivery-phone">
-              <label for="form-label-phone">Телефон</label>
+            <p class="field-group form-delivery-phone">
+              <span class="form-label"><label for="form-label-phone">Телефон</label></span>
               <input type="text" id="form-label-phone" name="phone" placeholder="+7 800 999-00-00">
             </p>
-            <p class="form-delivery-adress">
+            <p class="field-group form-delivery-adress">
               <span class="form-label form-label-icon">
                 <label for="form-label-adres">Адрес</label>
                 <button class="info" type="button">
@@ -358,19 +358,20 @@
               </span>
               <input type="text" id="form-label-adres" name="adres" placeholder="ул. Большая Конюшенная, 19/8">
             </p>
-            <a class="link-form button" href="#"><span>Отправить</span></a>
+            <span class="button-pink-wrap link-form-wrap"><a class="link-form button button-pink" href="#"><span>Отправить</span></a></span>
           </form>
         </section>
       </section>
       <section class="contacts">
         <h2 class="visually-hidden">Адрес</h2>
         <div class="contacts-content">
-          <p class="contacts-content-text">Адрес главного офиса и офлайн-магазина: </p>
-          <span class="contacts-content-adres text-norm">наб. Реки Карповки, 5 лит П, Санкт-Петербург</span>
-          <p>Для заказов по телефону:</p>
+          <p class="contacts-content-text">Адрес главного офиса <br> и офлайн-магазина: </p>
+          <span class="contacts-content-adres text-norm">наб. реки Карповки, <br> 5 лит  П, Санкт-Петербург</span>
+          <p class="contacts-order">Для заказов по телефону:</p>
           <a class="contacts-content-phone text-norm" href="tel:+78128121212">+7 (812) 812-12-12</a>
-          <p>(с 10 до 20 ежедневно)</p>
-          <a class="button" href="#">Форма обратной связи</a>
+          <p class="contacts-time">(с 10 до 20 ежедневно)</p>
+          <span class="button-pink-wrap"><a class="button button-pink" href="#">Форма обратной связи</a></span
+>
         </div>
       </section>
     </main>
